# SRF

./: .clang-tidy  .gitignore  CMakeLists.txt  dependencies.yaml  mrc.code-workspace
ci/conda/environments/: ci_env.yml
ci/conda/recipes/libsrf/: meta.yaml
ci/iwyu/: mappings.imp
cmake/: Configure_UCXX.cmake  dependencies.cmake  python_module_tools.cmake
conda/environments/: all_cuda-121_arch-x86_64.yaml  ci_cuda-121_arch-x86_64.yaml
cpp/: CMakeLists.txt
cpp/mrc/: CMakeLists.txt
cpp/mrc/benchmarks/: bench_descriptors.cpp
cpp/mrc/include/mrc/: types.hpp
cpp/mrc/include/mrc/core/: async_service.hpp  userspace_threads.hpp
cpp/mrc/include/mrc/edge/: deferred_writable_multi_edge.hpp  edge.hpp  edge_builder.hpp  edge_channel.hpp  edge_holder.hpp  edge_holder_base.hpp  edge_readable.hpp  edge_writable.hpp
cpp/mrc/include/mrc/manifold/: composite_manifold.hpp
cpp/mrc/include/mrc/node/: forward.hpp  generic_node.hpp  generic_sink.hpp  generic_source.hpp  queue.hpp  readable_endpoint.hpp  rx_node.hpp  rx_runnable.hpp  rx_sink.hpp  rx_sink_base.hpp  (+7 more)
cpp/mrc/src/tests/: test_grpc.cpp  test_network.cpp  test_next.cpp  test_pipeline.cpp  test_runnable.cpp
cpp/mrc/tests/: CMakeLists.txt  test_edges.cpp  test_executor.cpp  test_node.cpp  test_segment.cpp  test_string_utils.cpp
cpp/mrc/tests/modules/: test_mirror_tap_module.cpp
docs/quickstart/: CMakeLists.txt  compile.sh
docs/quickstart/hybrid/: CMakeLists.txt
docs/quickstart/hybrid/srf_qs_hybrid/common/: CMakeLists.txt
docs/quickstart/hybrid/srf_qs_hybrid/ex00_wrap_data_objects/: CMakeLists.txt
docs/quickstart/hybrid/srf_qs_hybrid/ex01_wrap_nodes/: CMakeLists.txt
docs/quickstart/python/: CMakeLists.txt
include/srf/manifold/: load_balancer.hpp
include/srf/node/: rx_node.hpp  rx_sink.hpp  rx_source.hpp
include/srf/pipeline/: pipeline.hpp
include/srf/pubsub/: client_subscription_base.hpp  publisher.hpp  subscriber.hpp
include/srf/runnable/: context.hpp  engine.hpp  fiber_context.hpp  launch_control.hpp  launch_options.hpp  rx_thread_factory.hpp  thread_context.hpp
include/srf/segment/: builder.hpp  definition.hpp  egress_ports.hpp  ingress_ports.hpp  ports.hpp
include/srf/utils/: chrono_utils.hpp
protos/: CMakeLists.txt
protos/mrc/protos/: architect.proto  architect_state.proto
python/mrc/: __init__.py
python/mrc/_pymrc/src/: executor.cpp  operators.cpp  segment.cpp
python/mrc/_pymrc/tests/: test_codable_pyobject.cpp  test_pipeline.cpp
python/mrc/core/: common.cpp  executor.cpp  operators.cpp  segment.cpp
python/srf/_pysrf/: CMakeLists.txt
python/srf/_pysrf/src/: observable.cpp  observer.cpp  operators.cpp  pipeline.cpp  segment.cpp  utils.cpp
python/srf/core/: node.cpp  operators.cpp  pipeline.cpp  subscriber.cpp
python/srf/tests/: test_edges.cpp
python/tests/: conftest.py  test_coro.py  test_edges.py  test_executor.py  test_node.py  test_operators.py
src/internal/control_plane/client/: subscription_service.cpp  subscription_service.hpp
src/internal/pipeline/: manager.cpp
src/internal/pubsub/: pub_sub_base.hpp  publisher_manager.hpp  subscriber_manager.hpp
src/internal/runnable/: engine.cpp  engine.hpp  engine_factory.cpp  fiber_engine.cpp  fiber_engine.hpp  fiber_engines.cpp  rx_thread_factory.cpp  thread_engine.cpp  thread_engine.hpp  thread_engines.cpp  thread_engines.hpp
src/internal/system/: resources.cpp  thread.cpp  thread.hpp
src/public/pubsub/: publisher.cpp  subscriber.cpp
src/public/runnable/: context.cpp  launch_options.cpp  runner.cpp
src/tests/: CMakeLists.txt  test_control_plane.cpp  test_next.cpp  test_runnable.cpp  test_rxcpp.cpp
tests/: CMakeLists.txt  test_executor.cpp  test_node.cpp  test_pipeline.cpp  test_rxcpp_ops.cpp
ts/control-plane/: package.json
ts/control-plane/src/client/: client.test.ts  client.ts  segment_manager.ts  utils.ts
ts/control-plane/src/common/: dev_tools.ts  entities.ts
ts/control-plane/src/server/: architect.ts  run_server.ts
ts/control-plane/src/tests/: defaultObjects.ts
(+81 files in other folders)
